# bpa_remake

./: CMakeLists.txt  README.md
include/: BpaRemake  Edge.h  Front.h  MlsApplier.h  Pivoter.h
include/impl/: BpaRemake  Edge.hpp  Front.hpp  MlsApplier.hpp  Pivoter.hpp
src/: Edge.cpp  Front.cpp  MlsApplier.cpp  Pivoter.cpp  main.cpp
